fix check for missing attribute

--- a/nodes/felix-data.html
+++ b/nodes/felix-data.html
@@ -78,11 +78,11 @@
       <dd>An optional API Key to override the configured Felix API Key.</dd>
       <dt class="optional">dvcId <span class="property-type">string</span></dt>
       <dd>An optional Device ID to override the configured Device ID.</dd>
-      <dt class="optional">Channel <span class="property-type">string</span></dt>
+      <dt class="optional">channel <span class="property-type">string</span></dt>
       <dd>An optional Channel path to override the configured Channel path.</dd>
-      <dt class="optional">Value Tag <span class="property-type">string</span></dt>
+      <dt class="optional">valueTag <span class="property-type">string</span></dt>
       <dd>An optional JSON tag to override the configured JSON tag specifying the value to send to Felix.</dd>
-      <dt class="optional">Units <span class="property-type">string</span></dt>
+      <dt class="optional">units <span class="property-type">string</span></dt>
       <dd>An optional Units string to override the configured Units string.</dd>
   </dl>
   <h3>Output Message Properties</h3>
